--- a/styles.css
+++ b/styles.css
@@ -16,6 +16,7 @@ body{
 h1{
     font-family: cursive;
     font-size: 2.5rem;
+    color: purple;
 }
 
 h4{
@@ -31,7 +32,7 @@ button{
     cursor: pointer;
     font-weight: bold;
     margin: 0 15px 0 0 ;
-   background-color: red;
+   
 }
 /* ==================================FACEBOOK buttons================================== */
 /* ----------------Facebook dark mode button styles */
